--- a/tic-Tac-toe-Server/nbproject/private/private.properties
+++ b/tic-Tac-toe-Server/nbproject/private/private.properties
@@ -1,3 +1,3 @@
 auxiliary.org-netbeans-modules-projectapi.issue214819_5f_fx_5f_enabled=true
 file.reference.ojdbc14.jar=E:\\GUIDataBase
-user.properties.file=C:\\Users\\User\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\essam elden\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
