--- a/tic-Tac-toe-Server/nbproject/project.properties
+++ b/tic-Tac-toe-Server/nbproject/project.properties
@@ -1,5 +1,6 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
+annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
@@ -29,26 +30,19 @@ dist.jar=${dist.dir}/tic-Tac-toe-Server.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-<<<<<<< HEAD
-file.reference.ojdbc14.jar-2=E:\\GUIDataBase\\ojdbc14.jar
-=======
-file.reference.ojdbc14.jar=C:\\Users\\LapStore\\Downloads\\ojdbc14.jar
->>>>>>> 6b509f7ca43922cc1331c6b205fea92c0ac9ccc1
+file.reference.ojdbc14.jar=E:\\GUIDataBase\\ojdbc14.jar
+file.reference.ojdbc14.jar-1=E:\\GUIDataBase\\ojdbc14.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
-<<<<<<< HEAD
-    ${file.reference.ojdbc14.jar-2}
-=======
-    ${file.reference.ojdbc14.jar}
->>>>>>> 6b509f7ca43922cc1331c6b205fea92c0ac9ccc1
+    ${file.reference.ojdbc14.jar}:\
+    ${file.reference.ojdbc14.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
-javac.external.vm=false
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.8
@@ -110,7 +104,6 @@ manifest.custom.codebase=*
 manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
-mkdist.disabled=false
 platform.active=default_platform
 run.classpath=\
     ${dist.jar}:\
